src/index.css
:root{
  --color-blue-900: hsl(209, 23%, 22%);
  --color-blue-950: hsl(207, 26%, 17%);
  --color-grey-950: hsl(200, 15%, 8%);
  --color-grey-400: hsl(0, 0%, 50%);
  --color-grey-50: hsl(0, 0%, 98%);
}

[data-theme='dark']{
  --bg-page: var(--color-blue-950);
  --bg-el: var(--color-blue-900);
  --text-main: var(--color-grey-50);
  --shadow: 0 0 20px #00000020;
}

[data-theme='light']{
  --bg-page: var(--color-grey-50);
  --bg-el: white;
  --text-main: var(--color-blue-950);
  --shadow: 0 0 10px #00000020;
}

*, *::before, *::after {
  box-sizing: border-box;
}
  
* {
  margin: 0;
  padding: 0;
}

body {
  /* line-height: 1.5; */
  min-height: 100vh;
  -webkit-font-smoothing: antialiased;
  font-family: "Nunito Sans", sans-serif;
}

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
  height: auto;
}

input, button, textarea, select {
  font: inherit;
}

p, h1,h2,h3,h4,h5,h6 {
  overflow-wrap: break-word;
}

p { text-wrap: pretty; }
h1,h2,h3,h4,h5,h6 { text-wrap: balance; }

#root, #__next {
  isolation: isolate;
}
li{
  list-style: none;
}

@media (prefers-reduced-motion: reduce) {
  *, *::before, *::after {
    animation-duration: 0.01ms !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* mobile layout */

.wrapper{
  min-height: 100vh;
  background-color: var(--bg-page);
  color: var(--text-main);
  position: relative;
  transition: background-color 0.3s ease, color 0.3s ease;
}

header{
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 1rem;
  background-color: var(--bg-el);
  color: var(--text-main);
  font-size: 14px;

  & h1{
    font-size: 14px;
    font-weight: 800;
  }
}

.toggle{
  cursor: pointer;
  color: var(--text-main);
  border: none;
  font-size: 14px;
  font-weight: 600;
  background-color: transparent;
  display: flex;
  align-items: center;
  gap: 5px;
}

.filled{
  fill: var(--text-main);
}

main{
  padding: 1rem;
}

.topbar-container{
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.country-label{
  display: block;
  position: relative;
}

input{
  width: 100%;
  background-color: var(--bg-el);
  border: none;
  padding: 0.8rem 0 0.8rem 3rem;
  border-radius: 5px;
  color: var(--text-main);
  outline: none;
  box-shadow: var(--shadow);

  &::placeholder{
    color: var(--text-main);
    opacity: 0.5;
    font-size: 14px;
  }
}

.search-icon{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 1rem;
  opacity: 0.5;
}

.filter-container{
  display: flex;
  align-items: center;
  gap: 1rem;
}

.filter-label{
  position: relative;
}

.clear{
  display: inline-block;

  & button{
    background-color: transparent;
    border: none;
    color: var(--text-main);
    font-size: 14px;
    cursor: pointer;
  }
}

.down-icon{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
  transition: transform 0.3s ease;
}

select:open + .down-icon{
  transform: rotate(180deg) translateY(50%);
}

select, ::picker(select) {
  appearance: base-select;
}

select::picker-icon{
  display: none;
}

select{
  cursor: pointer;
  width: 12rem;
  padding: 1rem 1.5rem;
  background-color: var(--bg-el);
  border: none;
  color: var(--text-main);
  border-radius: 5px;
  outline: none;
  font-size: 12px;
  font-weight: 600;
  box-shadow: var(--shadow);

  &:focus-visible{
    outline: 1px solid var(--text-main);
    outline-offset: 2px;
  }
}

::picker(select){
  background-color: var(--bg-el);
  border-radius: 5px;
  margin-top: 5px;
  border: none;
  color: var(--text-main);
  padding: 0.5rem;
}

option{
  padding: 5px;
  padding-left: 1rem;
  margin-block: 2px;
  border-radius: 5px;

  &:hover{
    background-color: var(--bg-page);
  }

  &:focus-visible{
    outline: 1px solid var(--text-main);
    background-color: var(--bg-page);
  }
}

option::checkmark{
  display: none;
}

option:checked{
  background-color: var(--bg-page);
}

.country-list-wrapper{
  display: flex;
  align-items: center;
  justify-content: center;
}

.loading-state, .error-state, .empty-state{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.list-container{
  padding-block: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.country-card{
  width: 275px;
  /* overflow: hidden; */
  border-radius: 5px;
  background-color: var(--bg-el);
  transition: scale 0.3s;
  box-shadow: var(--shadow);

  &:hover{
    scale: 1.02;
  }
}

.country-card img{
  aspect-ratio: 5/3;
  object-fit: cover;
  border-radius: 5px 5px 0 0;
}

.country-card a{
  text-decoration: none;
  color: var(--text-main);
  display: block;
}

.country-info{
  padding: 1.5rem 1rem 2rem 1.5rem;
}

.country-info h2{
  font-size: 16px;
  font-weight: 800;
  margin-bottom: 1rem;
}

.country-info p{
  margin-block: 3px;
  font-size: 14px;
  font-weight: 600;

  & span{
    color: var(--text-main);
    font-weight: 300;
  }
}

.country-details-container{
  padding: 0.5rem;
}

.back-btn{
  display: flex;
  align-items: center;
  gap: 0.5rem;
  background-color: var(--bg-el);
  border: none;
  padding: 8px 1rem;
  border-radius: 2px;
  color: var(--text-main);
  font-size: 14px;
  cursor: pointer;
  box-shadow: var(--shadow);
}

.info-container{
  margin-top: 2rem;
  font-size: 14px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.info-container img{
  aspect-ratio: 3/2;
  max-width: 500px;
}

.details-section{
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.details-section h2{
  font-size: 20px;
  font-weight: 800;
  margin-top: 1rem;
}

.details{
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.top-details strong{
  font-weight: 600;
  display: block;
  margin-block: 0.5rem;
}

strong span{
  font-weight: 300;
  padding-left: 5px;
}

.bottom-details strong{
  font-weight: 600;
  display: block;
  margin-block: 0.5rem;
}

h3{
  font-size: 14px;
  margin-bottom: 1rem;
}

.countries{
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.country-btn{
  background-color: var(--bg-el);
  border: none;
  border-radius: 2px;
  padding: 5px 1rem;
  font-size: 12px;
  color: var(--text-main);
  cursor: pointer;
  box-shadow: var(--shadow);
  transition: scale 0.3s ease;

  &:hover{
    scale: 1.02;
  }
}

@media (min-width: 600px){

  .topbar-container{
    flex-direction: row;
    justify-content: space-between;
  }

  .country-label{
    width: 50%;
    max-width: 500px;
  }

  .filter-container{
    flex-direction: row-reverse;
  }

  .list-container{
    display: grid;
    width: 100%;
    grid-template-columns: repeat(auto-fill, 275px);
    gap: 4rem;
  }

  .country-card{
    width: 275px;
  }
}

@media (min-width: 1000px){

  header{
    padding-inline: 4rem;
  }

  main{
    padding-inline: 4rem;
  }

  .back-btn{
    margin-block: 1rem 3rem;
  }

  .info-container{
    flex-direction: row;
    align-items: center;
    gap: 5rem;
    font-size: 16px;
  }
  
  .info-container img{
    width: 45%;
    max-width: 800px;
  }

  .details-section h2{
    font-size: 30px;
  }

  .details{
    flex-direction: row;
    gap: 5rem;
  }

  h3{
    font-size: 16px;
  }

  .country-btn{
    font-size: 14px;
  }
}

@media (min-width: 1400px){

  header h1{
    font-size: 18px;
  }

  .toggle{
    font-size: 16px;
    gap: 1rem;
  }

  .country-label{
    font-size: 16px;
  }

  input{
    padding-block: 1rem;
  }
  input::placeholder{
    font-size: 16px;
  }

  select{
    width: 15rem;
    padding: 1rem 2rem;
    font-size: 14px;
  }




}

